--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ RSS: false
 #weibo_username:     huxpro
 #zhihu_username:     huxpro
 github_username:    huxpro
-twitter_username:   huxpro
-facebook_username:  huxpro
-linkedin_username:  firstname-lastname-idxxxx
+twitter_username:   Park_jonghun
+facebook_username:  Park.jonghun
+linkedin_username:  parkjonghun #firstname-lastname-idxxxx
 
 
 
