--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ future: true
 RSS: false
 #weibo_username:     huxpro
 #zhihu_username:     huxpro
-github_username:    huxpro
+github_username:    Simplify-Criss
 twitter_username:   Park_jonghun
 facebook_username:  Park.jonghun
 linkedin_username:  parkjonghun #firstname-lastname-idxxxx
