--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ ga_domain: huangxuan.me
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "Everyday study and work, for software engineering"
-sidebar-avatar: /img/avatar-simplify.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /blog/img/avatar-simplify.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
