--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: hux
+disqus_username: simplify_jonghun
 
 # Netease settings
 netease_comment: false
