--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Simplify Blog
 SEOTitle: Simplify
-header-img: img/home-bg.jpg
+header-img: img/post-bg-08.jpg
 email: jonghun.criss.android@gmail.com
 description: "Study blog for Java, javaScript, Web, Spring-framework, back-end processing, etc."
 keyword: "Java, javascript, web, html, jsp, spring, springboot"
