--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ header-img: img/post-bg-08.jpg
 email: jonghun.criss.android@gmail.com
 description: "Study blog for Java, javaScript, Web, Spring-framework, back-end processing, etc."
 keyword: "Java, javascript, web, html, jsp, spring, springboot"
-url: "http://4urdev.tistory.com/"              # your host, for absolute URL
-baseurl: "/blog"                             # for example, '/blog' if your blog hosted on 'host/blog'
+url: "http://4urdev.tistory.com/blog/"              # your host, for absolute URL
+baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
 future: true
