--- a/_config.yml
+++ b/_config.yml
@@ -137,3 +137,14 @@ page-mathjax: false
 #        href: "http://xieminis.me/"
 #    }
 #]
+
+# post defaults
+defaults:
+  - 
+    scope: 
+      path: ""
+      type: "post"
+    values: 
+      author:     "Jonghun Park"
+      header-mask: 0.3
+      catalog:    true
