--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,8 @@ page-mathjax: false
 
 # collections
 collections:
-- springboot
+  - springboot:
+      output: true
 
 # collections directory
 collections_dir: collections
