default value added

--- a/_config.yml
+++ b/_config.yml
@@ -100,13 +100,13 @@ page-mathjax: false
 
 
 
-# collections
-collections:
-  - springboot:
-      output: true
+# # collections
+# collections:
+#   - springboot:
+#       output: true
 
-# collections directory
-collections_dir: collections
+# # collections directory
+# collections_dir: collections
 
 # post defaults
 defaults:
@@ -118,18 +118,15 @@ defaults:
       author: "Jonghun Park"
       header-mask: 0.6
       catalog: true
-  - scope: 
-      path: ""
-      type: springboot
-    values: 
-      layout: post
-      author: "Jonghun Park"
-      header-mask: 0.6
-      catalog: true
-      header-img: "img/post-bg-springboot.jpg"
-      tags:
-        - Spring
-        - SpringBoot
+  # - scope: 
+  #     path: ""
+  #     type: springboot
+  #   values: 
+  #     layout: post
+  #     author: "Jonghun Park"
+  #     header-mask: 0.6
+  #     catalog: true
+
 
 
 
