--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: simplify-jonghun
+disqus_username: simplify-study
 
 # Netease settings
 netease_comment: false
