--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ page-mathjax: false
 collections:
   springboot:
     output: true
-    permalink: /:collectin/:path/
+    permalink: /:collection/:path/
 
 
 # # collections directory
